# toridex

./: .gitignore  analyze_photos.py  calibrate.py  evaluate.py  export_onnx.py  export_yolo_detector.py  generate_species_db.py  pipeline.py  predict.py  requirements.txt  tmpclaude-395d-cwd  train.py
src/: dataset.py  download_images.py  download_metadata.py  fetch_french_species.py  filter_dataset.py  french_names.py  model.py
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  main.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  db.rs  download.rs  exif.rs  lib.rs  main.rs  paths.rs  scan.rs  thumbs.rs
tauri-app/src-tauri/src/db/: mod.rs  photos.rs
tauri-app/src/components/: DetailModal.tsx  LabelConflictModal.tsx  MissingPhotosModal.tsx  PokedexTab.tsx  PseudoSpeciesCard.tsx  PseudoSpeciesTab.tsx  ScanPanel.tsx  SearchFilterBar.tsx  SpeciesCard.tsx  SpeciesPicker.tsx  UnknownPanel.tsx
tauri-app/src/hooks/: useBirdData.ts  useVirtualizedGrid.ts
tauri-app/src/inference/: classifierWorker.ts  detectorWorker.ts  index.ts  worker.ts  workerClient.ts
